--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ th{
 }
 .settings{
     position: absolute;
-    width: 400px;
+    width: 600px;
     height: 100px;
     background-color: rgba(0, 0, 0, 0.96);
     padding-top: 10px;
@@ -90,6 +90,15 @@ th{
     border-color: rgb(0, 0, 0);
     background-color: rgb(82, 82, 82);
     
+}
+.profile_pic{
+    float: right;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    width: 65px;
+    height: 50px;
+    background-color: white;
 }
 
 .username_header{
@@ -158,6 +167,7 @@ input{
 
 body{
     color: white;
+    background-color: rgb(46, 46, 46);
 }
 .empty{
 
